1999-04-09  Tom Tromey  <tromey@cygnus.com>

	* gcj.test: New file.
	* Makefile.am (TESTS): Added gcj.test.

1999-04-08  Tom Tromey  <tromey@cygnus.com>

	* cond8.test: New file.
	* Makefile.am (TESTS): Added cond8.test.

1999-04-07  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* backsl2.test: New file.
	* Makefile.am (TESTS): Added backsl2.test.

	* texinfo8.test: texinfo.tex is only disted by aux/Makefile.

	* texinfo8.test: New file.
	* Makefile.am (TESTS): Added texinfo8.test.

1999-03-31  Tom Tromey  <tromey@cygnus.com>

	* pluseq2.test, pluseq3.test: Updated for recent \-preservation
	change.

1999-03-31  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* Makefile.am (XFAIL_TESTS): add confh.test

1999-03-30  Tom Tromey  <tromey@cygnus.com>

	* mclean.test: Fixed typo.

	* mclean.test: New file.
	* Makefile.am (TESTS): Added mclean.test.

1999-03-30  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* confh.test: if include/Makefile.am is created, the test fails

1999-03-27  Tom Tromey  <tromey@cygnus.com>

	* extra4.test: Allow EXTRA_DATA to be specified.

1999-03-22  Tom Tromey  <tromey@cygnus.com>

	* ldadd.test: Use AC_PROG_LIBTOOL, not AM_PROG_LIBTOOL.

	* pluseq7.test: New file.
	* Makefile.am (TESTS): Added pluseq7.test.
	* pluseq6.test: New file.
	* Makefile.am (TESTS): Added pluseq6.test.

1999-03-21  Tom Tromey  <tromey@cygnus.com>

	* nodep.test: New file.
	* Makefile.am (TESTS): Added nodep.test.

	* subdir3.test: Correctly mention _SOURCES in Makefile.am.

	* subdir3.test: New file.
	* Makefile.am (TESTS): Added subdir3.test.
	* xsource.test: Changed to check whether multiple source files
	with same object name cause failure.

1999-03-11  Tom Tromey  <tromey@cygnus.com>

	* libobj9.test: New file.
	* Makefile.am (TESTS): Added libobj9.test.

	* insthook.test: Don't require GNU grep.  From John Pierce.

	* lex3.test: New file.
	* Makefile.am (TESTS): Added lex3.test.

1999-03-01  Tom Tromey  <tromey@cygnus.com>
