@@ -29,21 +29,21 @@ libobj.test libobj2.test libobj3.test libobj4.test libobj5.test	\
 libobj6.test libobj7.test libobj8.test libobj9.test library.test \
 link_c_cxx.test link_f_c.test link_f_c_cxx.test link_f_cxx.test	\
 link_f_only.test lisp.test mclean.test mdate.test mdate2.test \
-mdate3.test mkinst2.test mkinstall.test nodep.test noinst.test \
-number.test objc.test obsolete.test obsolete2.test order.test \
-outdir.test output.test output2.test output3.test output4.test \
-output5.test package.test parse.test pluseq.test pluseq2.test \
-pluseq3.test pluseq4.test pluseq5.test pluseq6.test pluseq7.test \
-ppf77.test prefix.test primary.test primary2.test proginst.test	\
-ranlib.test recurs.test recurs2.test remake.test remake2.test req.test \
-rulepat.test scripts.test seenc.test sinclude.test spell.test \
-spell2.test spell3.test spelling.test stamph.test stdlib.test \
-subdir.test subdir2.test subdir3.test subst.test symlink.test \
-syntax.test tags.test tagsub.test target.test texinfo.test \
-texinfo2.test texinfo3.test texinfo4.test texinfo5.test texinfo6.test \
-texinfo7.test texinfo8.test unused.test version.test version2.test \
-version3.test vpath.test vtexi.test vtexi2.test whoami.test \
-xsource.test yacc.test yaccpp.test
+mdate3.test mkinst2.test mkinstall.test nodep.test nodist.test \
+noinst.test number.test objc.test obsolete.test obsolete2.test \
+order.test outdir.test output.test output2.test output3.test \
+output4.test output5.test package.test parse.test pluseq.test \
+pluseq2.test pluseq3.test pluseq4.test pluseq5.test pluseq6.test \
+pluseq7.test ppf77.test prefix.test primary.test primary2.test \
+proginst.test ranlib.test recurs.test recurs2.test remake.test \
+remake2.test req.test rulepat.test scripts.test seenc.test \
+sinclude.test spell.test spell2.test spell3.test spelling.test \
+stamph.test stdlib.test subdir.test subdir2.test subdir3.test \
+subst.test symlink.test syntax.test tags.test tagsub.test target.test \
+texinfo.test texinfo2.test texinfo3.test texinfo4.test texinfo5.test \
+texinfo6.test texinfo7.test texinfo8.test unused.test version.test \
+version2.test version3.test vpath.test vtexi.test vtexi2.test \
+whoami.test xsource.test yacc.test yaccpp.test
 
 EXTRA_DIST = defs $(TESTS)
 
