@@ -1,0 +1,27 @@
+#! /bin/sh
+
+# Test to make sure dist_*_SOURCES and nodist_*_SOURCES work.
+
+. $srcdir/defs || exit 1
+
+echo AC_PROG_CC >> configure.in
+
+cat > Makefile.am << 'END'
+bin_PROGRAMS = eyeball
+
+eyeball_SOURCES = a.c
+nodist_eyeball_SOURCES = b.c
+dist_eyeball_SOURCES = c.c
+END
+
+: > a.c
+: > b.c
+: > c.c
+
+$AUTOMAKE || exit 1
+
+grep '^am_eyeball_OBJECTS' Makefile.in || exit 1
+grep '^DIST_SOURCES =' Makefile.in || exit 1
+grep '^DIST_SOURCES =.*nodist' Makefile.in && exit 1
+
+exit 0
