@@ -1,5 +1,8 @@
 1999-04-09  Tom Tromey  <tromey@cygnus.com>
 
+	* nodist.test: New file.
+	* Makefile.am (TESTS): Added nodist.test.
+
 	* gcj.test: New file.
 	* Makefile.am (TESTS): Added gcj.test.
 
